<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_width="fill_parent" android:gravity="center" android:text="@string/app_name" android:textSize="55sp"></TextView>
    <Button android:layout_height="wrap_content" android:id="@+id/button1" android:layout_below="@+id/textView1" android:layout_centerHorizontal="true" android:layout_width="fill_parent" android:textSize="30sp" android:text="@string/button_start" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:layout_marginBottom="20dp"></Button>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_below="@+id/button1" android:layout_centerHorizontal="true" android:layout_width="fill_parent" android:text="@string/text_activelist" android:textSize="20dp" android:layout_marginLeft="10dp"></TextView>
    <Spinner android:layout_height="wrap_content" android:id="@+id/spinner1" android:layout_below="@+id/textView2" android:layout_centerHorizontal="true" android:layout_width="fill_parent" android:layout_margin="5dp"></Spinner>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_alignTop="@+id/button2" android:layout_toRightOf="@+id/button2" android:layout_width="fill_parent" android:gravity="right" android:layout_marginRight="10dp" android:text="@string/text_loggedin"></TextView>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_alignParentBottom="true" android:layout_alignLeft="@+id/textView3" android:layout_width="fill_parent" android:gravity="right" android:text="@string/text_notlogged" android:textSize="25sp" android:layout_marginRight="10dp" android:layout_marginBottom="15dp"></TextView>
    <TextView android:textSize="12sp" android:layout_height="wrap_content" android:textColor="#666666" android:layout_width="fill_parent" android:text="@string/text_copyright" android:id="@+id/textView5" android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"></TextView>
    <Button android:layout_height="50dp" android:layout_width="100dp" android:textSize="20sp" android:text="@string/button_login" android:id="@+id/button2" android:layout_above="@+id/textView5" android:layout_alignLeft="@+id/spinner1"></Button>
    <Button android:layout_height="wrap_content" android:id="@+id/button3" android:layout_below="@+id/spinner1" android:layout_centerHorizontal="true" android:layout_width="fill_parent" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/button_sync" android:visibility="invisible"></Button>
    <Button android:layout_height="45dp" android:layout_width="45dp" android:textSize="20sp" android:text="@string/button_add" android:id="@+id/button5" android:textStyle="bold" android:layout_alignBaseline="@+id/button4" android:layout_alignBottom="@+id/button4" android:layout_toLeftOf="@+id/button4"></Button>
    <Button android:layout_height="45dp" android:layout_width="45dp" android:textSize="20sp" android:text="@string/button_remove" android:id="@+id/button4" android:textStyle="bold" android:layout_alignBottom="@+id/textView2" android:layout_alignRight="@+id/textView3"></Button>
</RelativeLayout>
