<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_height="fill_parent" android:layout_width="270dp">
    <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:text="TextView" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:textSize="45sp" android:layout_width="wrap_content" android:layout_marginBottom="15dp"></TextView>
    <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/textView1" android:layout_centerHorizontal="true" android:textSize="45dp" android:layout_marginBottom="20dp" android:text="@string/text_hidden"></TextView>
    <Button android:id="@+id/button1" android:layout_below="@+id/textView2" android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:text="@string/text_show" android:layout_height="65dp"></Button>
    <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true">
        <Button android:layout_weight="1" android:text="@string/button_know" android:id="@+id/button2" android:layout_height="wrap_content" android:layout_width="0dp"></Button>
        <Button android:layout_weight="1" android:text="@string/button_dontknow" android:id="@+id/button3" android:layout_height="wrap_content" android:layout_width="0dp"></Button>
    </LinearLayout>
    
</RelativeLayout>
