<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_height="fill_parent" android:layout_width="250dp">
    <TextView android:id="@+id/textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_username" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"></TextView>
    <EditText android:layout_width="fill_parent" android:id="@+id/editText1" android:layout_height="wrap_content" android:inputType="textVisiblePassword" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:layout_marginBottom="10dp">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:id="@+id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/text_password"></TextView>
    <EditText android:layout_width="fill_parent" android:id="@+id/editText2" android:layout_height="wrap_content" android:inputType="textPassword" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"></EditText>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/button1" android:layout_margin="5dp" android:textSize="17sp" android:text="@string/button_login"></Button>
    
</LinearLayout>
