<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_height="fill_parent" android:layout_width="250dp">
    <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginLeft="10dp" android:text="@string/text_listname"></TextView>
    <EditText android:layout_width="fill_parent" android:id="@+id/editText1" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:inputType="textVisiblePassword">
        <requestFocus></requestFocus>
    </EditText>
    <ListView android:id="@+id/listView1" android:layout_width="fill_parent" android:layout_height="150dp"></ListView>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_marginLeft="5dp" android:layout_marginRight="5dp">
        <EditText android:id="@+id/editText2" android:layout_height="wrap_content" android:layout_width="0dp" android:layout_weight="2" android:inputType="textVisiblePassword"></EditText>
        <EditText android:id="@+id/editText3" android:layout_height="wrap_content" android:layout_width="0dp" android:layout_weight="2" android:inputType="textVisiblePassword"></EditText>
        <Button android:layout_height="wrap_content" android:id="@+id/button1" android:text="@string/button_add" android:layout_weight="1" android:layout_width="0dp"></Button>
    </LinearLayout>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/button2" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/button_save"></Button>
    
</LinearLayout>
